<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/active_display">
        <Preference
            android:key="nls_switch"
            android:title="@string/notification_listener_switch_title">
            <intent android:action="android.settings.ACTION_NOTIFICATION_LISTENER_SETTINGS" />
        </Preference>
        <Preference
            android:key="notification_exclusions"
            android:shouldDisableView="true"
            android:summary="@string/exclusions_summary"
            android:title="@string/exclusions_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Preference category">
        <SwitchPreference
            android:defaultValue="false"
            android:key="indicator_switch"
            android:summary="@string/indicator_switch_summary"
            android:title="@string/indicator_switch_title" />
    </PreferenceCategory>
</PreferenceScreen>