<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TextConvertFragment">

    <EditText
        android:id="@+id/text_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/convert"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_normal"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/text_special"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/convert"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_special"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:entries="@array/text_convert_options" />

    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:text="@string/button_convert" />

    <Button
        android:id="@+id/text_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/convert"
        android:text="@string/button_clear"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>